2008-02-02  Walter Doerwald  <walter@livinglogic.de>

	* ipipe.py: A new ipipe table has been added: ialias produces all
	entries from IPython's alias table.
	
2008-02-01  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (MTInteractiveShell.runcode): Improve handling
	of KBINT in threaded shells.  After code provided by Marc in #212.

2008-01-30  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (MTInteractiveShell.__init__): Fixed deadlock
	that could occur due to a race condition in threaded shells.
	Thanks to code provided by Marc, as #210.

2008-01-29  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (magic_doctest_mode): respect the user's
	settings for input separators rather than overriding them.  After
	a report by Jeff Kowalczyk <jtk-AT-yahoo.com>

	* IPython/history.py (magic_history): Add support for declaring an
	output file directly from the history command.

2008-01-21  Walter Doerwald  <walter@livinglogic.de>

	* ipipe.py: Register ipipe's displayhooks via the generic function
	generics.result_display() instead of using ipapi.set_hook().
	
2008-01-19  Walter Doerwald  <walter@livinglogic.de>

	* ibrowse.py, igrid.py, ipipe.py:
	The input object can now be passed to the constructor of the display classes.
	This makes it possible to use them with objects that implement __or__.
	Use this constructor in the displayhook instead of piping.

	* ipipe.py: Importing astyle.py is done as late as possible to
	avoid problems with circular imports.
	
2008-01-19 Ville Vainio  <vivainio@gmail.com>

	* hooks.py, iplib.py: Added 'shell_hook' to customize how
	IPython calls shell.

	* hooks.py, iplib.py: Added 'show_in_pager' hook to specify
	how IPython pages text (%page, %pycat, %pdoc etc.)

	* Extensions/jobctrl.py: Use shell_hook. New magics: '%tasks'
	and '%kill' to kill hanging processes that won't obey ctrl+C.

2008-01-16 Ville Vainio  <vivainio@gmail.com>
